--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,21 +11,6 @@ jobs:
     name: Build and Test
     runs-on: ubuntu-latest
 
-    services:
-      postgres:
-        image: postgres:latest
-        env:
-          POSTGRES_DB: testdb
-          POSTGRES_USER: testuser
-          POSTGRES_PASSWORD: testpass
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -48,10 +33,6 @@ jobs:
         run: ./mvnw clean compile -B
 
       - name: Run tests
-        env:
-          SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/testdb
-          SPRING_DATASOURCE_USERNAME: testuser
-          SPRING_DATASOURCE_PASSWORD: testpass
         run: ./mvnw test -B
 
       - name: Package application
@@ -65,13 +46,14 @@ jobs:
           retention-days: 7
 
       - name: Generate test report
-        if: always()
+        if: success() || failure()
         uses: dorny/test-reporter@v1
         with:
           name: Maven Tests
-          path: target/surefire-reports/*.xml
+          path: target/surefire-reports/TEST-*.xml
           reporter: java-junit
-          fail-on-error: true
+          fail-on-error: false
+        continue-on-error: true
 
   code-quality:
     name: Code Quality Check
