--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -106,6 +106,7 @@ jobs:
         with:
           context: .
           push: false
+          load: true
           tags: cs4445-sub-server:test
           cache-from: type=gha
           cache-to: type=gha,mode=max
@@ -113,9 +114,6 @@ jobs:
       - name: Test Docker image
         run: |
           docker run -d --name test-container \
-            -e SPRING_DATASOURCE_URL=jdbc:postgresql://host.docker.internal:5432/testdb \
-            -e SPRING_DATASOURCE_USERNAME=testuser \
-            -e SPRING_DATASOURCE_PASSWORD=testpass \
             -p 8080:8080 \
             cs4445-sub-server:test
 
