--- a/.github/workflows/cd-v2-multi-server.yml
+++ b/.github/workflows/cd-v2-multi-server.yml
@@ -35,6 +35,8 @@ jobs:
     permissions:
       contents: read
       packages: write
+      id-token: write
+      attestations: write
 
     outputs:
       image-tag: ${{ steps.meta.outputs.tags }}
