--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,13 +71,33 @@ jobs:
           source: "image.tar.gz"
           target: "/tmp"
 
-      - name: Run container on Server 1
+      - name: Install Docker and Run container on Server 1
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_1_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
+          command_timeout: 10m
           script: |
+            # Install Docker if not present (non-interactive)
+            if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
+              export DEBIAN_FRONTEND=noninteractive
+              export NEEDRESTART_MODE=a
+              sudo apt-get update -qq
+              sudo apt-get install -y -qq ca-certificates curl gnupg
+              sudo install -m 0755 -d /etc/apt/keyrings
+              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+              sudo chmod a+r /etc/apt/keyrings/docker.gpg
+              echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+              sudo apt-get update -qq
+              sudo apt-get install -y -qq docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+              sudo systemctl start docker
+              sudo systemctl enable docker
+              echo "Docker installed successfully"
+            fi
+
+            # Deploy the application
             cd /tmp
             gunzip -c image.tar.gz | docker load
             docker stop sub-server || true
@@ -109,13 +129,33 @@ jobs:
           source: "image.tar.gz"
           target: "/tmp"
 
-      - name: Run container on Server 2
+      - name: Install Docker and Run container on Server 2
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_2_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
+          command_timeout: 10m
           script: |
+            # Install Docker if not present (non-interactive)
+            if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
+              export DEBIAN_FRONTEND=noninteractive
+              export NEEDRESTART_MODE=a
+              sudo apt-get update -qq
+              sudo apt-get install -y -qq ca-certificates curl gnupg
+              sudo install -m 0755 -d /etc/apt/keyrings
+              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+              sudo chmod a+r /etc/apt/keyrings/docker.gpg
+              echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+              sudo apt-get update -qq
+              sudo apt-get install -y -qq docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+              sudo systemctl start docker
+              sudo systemctl enable docker
+              echo "Docker installed successfully"
+            fi
+
+            # Deploy the application
             cd /tmp
             gunzip -c image.tar.gz | docker load
             docker stop sub-server || true
@@ -147,13 +187,33 @@ jobs:
           source: "image.tar.gz"
           target: "/tmp"
 
-      - name: Run container on Server 3
+      - name: Install Docker and Run container on Server 3
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.SERVER_3_HOST }}
           username: ${{ secrets.SERVER_USERNAME }}
           password: ${{ secrets.SERVER_PASSWORD }}
+          command_timeout: 10m
           script: |
+            # Install Docker if not present (non-interactive)
+            if ! command -v docker &> /dev/null; then
+              echo "Installing Docker..."
+              export DEBIAN_FRONTEND=noninteractive
+              export NEEDRESTART_MODE=a
+              sudo apt-get update -qq
+              sudo apt-get install -y -qq ca-certificates curl gnupg
+              sudo install -m 0755 -d /etc/apt/keyrings
+              curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+              sudo chmod a+r /etc/apt/keyrings/docker.gpg
+              echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+              sudo apt-get update -qq
+              sudo apt-get install -y -qq docker-ce docker-ce-cli containerd.io docker-buildx-plugin docker-compose-plugin
+              sudo systemctl start docker
+              sudo systemctl enable docker
+              echo "Docker installed successfully"
+            fi
+
+            # Deploy the application
             cd /tmp
             gunzip -c image.tar.gz | docker load
             docker stop sub-server || true
